--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
 spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
