--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
 spring.datasource.username=postgres
-spring.datasource.password=1
+spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
@@ -12,4 +12,10 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-server.port=8081
+server.port=8080
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=johnabdel818@gmail.com
+spring.mail.password=JohnabdeL@818
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
