--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-server.port=8080
+server.port=8081
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=johnabdel818@gmail.com
