--- a/WAA_Final_Project/pom.xml
+++ b/WAA_Final_Project/pom.xml
@@ -78,6 +78,12 @@
             <version>2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+
 
     </dependencies>
 
