--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
