--- a/WAA_Final_Project/pom.xml
+++ b/WAA_Final_Project/pom.xml
@@ -84,6 +84,13 @@
             <version>2.11.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.12.403</version>
+        </dependency>
+
+
 
     </dependencies>
 
