add commit entity in mongoDB

--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/final_project
 spring.datasource.username=postgres
 spring.datasource.password=1
@@ -19,3 +20,8 @@ spring.mail.username=johnabdel818@gmail.com
 spring.mail.password=JohnabdeL@818
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# MongoDB configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mydatabase
