--- a/WAA_Final_Project/pom.xml
+++ b/WAA_Final_Project/pom.xml
@@ -90,6 +90,10 @@
             <version>1.12.403</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
 
 
     </dependencies>
