--- a/WAA_Final_Project/src/main/resources/application.properties
+++ b/WAA_Final_Project/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=mydatabase
+
+# Redis configuration
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+logging.level.org.springframework.cache=DEBUG
+
